--- a/index.html
+++ b/index.html
@@ -5,64 +5,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Freelance Calculator</title>
   <style>
+    :root {
+      --text: #1d1d1f;
+      --light-gray: #f5f5f7;
+      --border: #d2d2d7;
+      --primary: #0071e3;
+    }
+
     body {
       margin: 0;
       padding: 20px;
-      background-color: #000;
-      color: #00ff00;
-      font-family: 'Courier New', monospace;
+      background-color: var(--light-gray);
+      color: var(--text);
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     }
 
     h1 {
       text-align: center;
-      font-size: 1.8em;
-      margin-bottom: 20px;
+      font-size: 2rem;
+      font-weight: 600;
+      margin-bottom: 30px;
     }
 
     label {
       display: block;
-      margin: 10px 0 5px;
+      margin: 12px 0 6px;
+      font-weight: 500;
     }
 
     input, select, button {
       width: 100%;
-      padding: 10px;
-      background: #000;
-      color: #00ff00;
-      border: 1px solid #00ff00;
-      font-family: 'Courier New', monospace;
-      font-size: 1em;
-      margin-bottom: 15px;
+      padding: 12px;
+      border: 1px solid var(--border);
+      border-radius: 10px;
+      font-size: 1rem;
+      margin-bottom: 20px;
+      box-sizing: border-box;
     }
 
     button {
-      font-weight: bold;
-      cursor: pointer;
+      background-color: var(--primary);
+      color: white;
+      font-weight: 600;
+      border: none;
+      transition: background 0.2s ease;
+    }
+
+    button:hover {
+      background-color: #005bb5;
     }
 
     .result {
       margin-top: 20px;
-      border-top: 1px solid #00ff00;
-      padding-top: 10px;
-      font-size: 1.1em;
+      border-top: 1px solid var(--border);
+      padding-top: 16px;
+      font-size: 1.2rem;
+      font-weight: 500;
     }
 
     .flex {
       display: flex;
       gap: 10px;
+      margin-bottom: 20px;
     }
 
     .flex > * {
       flex: 1;
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 600px) {
       h1 {
-        font-size: 1.4em;
+        font-size: 1.5rem;
       }
 
       input, select, button {
-        font-size: 1em;
+        font-size: 1rem;
       }
     }
   </style>
