--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
   <title>Freelance Calculator</title>
   <style>
     :root {
-      --text: #1d1d1f;
-      --light-gray: #f5f5f7;
-      --border: #d2d2d7;
+      --bg: #121212;
+      --text: #ffffff;
+      --input-bg: #1e1e1e;
+      --border: #333;
       --primary: #0071e3;
     }
 
     body {
       margin: 0;
       padding: 20px;
-      background-color: var(--light-gray);
+      background-color: var(--bg);
       color: var(--text);
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
     }
@@ -41,6 +42,8 @@
       font-size: 1rem;
       margin-bottom: 20px;
       box-sizing: border-box;
+      background-color: var(--input-bg);
+      color: var(--text);
     }
 
     button {
@@ -61,6 +64,17 @@
       padding-top: 16px;
       font-size: 1.2rem;
       font-weight: 500;
+    }
+
+    .meme {
+      margin-top: 20px;
+      text-align: center;
+    }
+
+    .meme img {
+      max-width: 100%;
+      border-radius: 10px;
+      max-height: 300px;
     }
 
     .flex {
@@ -101,21 +115,19 @@
   <label data-en="Hourly Rate" data-uk="Погодинна ставка">Hourly Rate</label>
   <input type="number" id="rate" placeholder="25" />
 
-  <label data-en="Days per Week" data-uk="Днів на тиждень">Days per Week</label>
-  <input type="number" id="days" placeholder="5" />
-
   <label data-en="Hours per Day" data-uk="Годин на день">Hours per Day</label>
   <input type="number" id="hoursPerDay" placeholder="6" />
 
   <label data-en="Tax (%)" data-uk="Податок (%)">Tax (%)</label>
   <input type="number" id="tax" placeholder="5" />
 
-  <label data-en="Platform Fee (%)" data-uk="Комісія платформи (%)">Platform Fee (%)</label>
-  <input type="number" id="fee" placeholder="10" />
-
   <button onclick="calculate()" data-en="Calculate" data-uk="Розрахувати">Calculate</button>
 
   <div class="result" id="result"></div>
+
+  <div class="meme" id="meme">
+    <img src="" alt="Meme from The Office" id="memeImg" style="display:none;">
+  </div>
 
   <script>
     let lang = 'en';
@@ -124,6 +136,7 @@
 
     function setLang(l) {
       lang = l;
+      localStorage.setItem('lang', l);
       document.querySelectorAll('[data-en]').forEach(el => {
         el.innerText = el.dataset[lang];
       });
@@ -132,22 +145,31 @@
 
     function setCurrency(c) {
       currency = c;
+      localStorage.setItem('currency', c);
       calculate();
+    }
+
+    function getMemeImage(rate) {
+      if (rate < 10) {
+        return 'https://i.imgur.com/YZ6Hj3Z.jpeg'; // Sad Michael
+      } else if (rate < 50) {
+        return 'https://i.imgur.com/O6vJU9p.jpg'; // Hopeful Michael
+      } else {
+        return 'https://i.imgur.com/ZGPB6TZ.jpg'; // Confident Michael
+      }
     }
 
     function calculate() {
       const rate = +document.getElementById('rate').value || 0;
-      const days = +document.getElementById('days').value || 0;
       const hoursPerDay = +document.getElementById('hoursPerDay').value || 0;
       const tax = +document.getElementById('tax').value || 0;
-      const fee = +document.getElementById('fee').value || 0;
 
+      const days = 5; // Default working days per week
       const weeklyHours = days * hoursPerDay;
       const monthlyHours = weeklyHours * 4;
       const gross = rate * monthlyHours;
-      const feeAmount = gross * (fee / 100);
-      const taxAmount = (gross - feeAmount) * (tax / 100);
-      const net = gross - feeAmount - taxAmount;
+      const taxAmount = gross * (tax / 100);
+      const net = gross - taxAmount;
       const yearly = net * 12;
 
       const symbol = currency === 'UAH' ? '₴' : '$';
@@ -163,9 +185,12 @@
         <div>${t[lang][1]}: ${symbol}${(net * multiplier).toFixed(2)}</div>
         <div>${t[lang][2]}: ${symbol}${(yearly * multiplier).toFixed(2)}</div>
       `;
+
+      const memeImg = document.getElementById('memeImg');
+      memeImg.src = getMemeImage(rate);
+      memeImg.style.display = 'block';
     }
 
-    // Restore user settings from localStorage if desired
     window.onload = () => {
       lang = localStorage.getItem('lang') || 'en';
       currency = localStorage.getItem('currency') || 'USD';
