--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
       background-color: var(--bg);
       color: var(--text);
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .container {
+      max-width: 400px;
+      width: 100%;
     }
 
     h1 {
@@ -62,7 +71,7 @@
       margin-top: 20px;
       border-top: 1px solid var(--border);
       padding-top: 16px;
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: 500;
     }
 
@@ -88,6 +97,10 @@
     }
 
     @media (max-width: 600px) {
+      .container {
+        padding: 10px;
+      }
+
       h1 {
         font-size: 1.5rem;
       }
@@ -99,39 +112,41 @@
   </style>
 </head>
 <body>
-  <h1 data-en="Freelance Calculator" data-uk="Калькулятор Фрілансера">Freelance Calculator</h1>
+  <div class="container">
+    <h1 data-en="Freelance Calculator" data-uk="Калькулятор Фрілансера">Freelance Calculator</h1>
 
-  <div class="flex">
-    <select id="langSelect" onchange="setLang(this.value)">
-      <option value="en">🇺🇸 EN</option>
-      <option value="uk">🇺🇦 УКР</option>
-    </select>
-    <select id="currencySelect" onchange="setCurrency(this.value)">
-      <option value="USD">USD</option>
-      <option value="UAH">UAH</option>
-    </select>
-  </div>
+    <div class="flex">
+      <select id="langSelect" onchange="setLang(this.value)">
+        <option value="en">🇺🇸 EN</option>
+        <option value="uk">🇺🇦 УКР</option>
+      </select>
+      <select id="currencySelect" onchange="setCurrency(this.value)">
+        <option value="USD">USD</option>
+        <option value="UAH">UAH</option>
+      </select>
+    </div>
 
-  <label data-en="Hourly Rate" data-uk="Погодинна ставка">Hourly Rate</label>
-  <input type="number" id="rate" placeholder="25" />
+    <label data-en="Hourly Rate" data-uk="Погодинна ставка">Hourly Rate</label>
+    <input type="number" id="rate" placeholder="25" />
 
-  <label data-en="Hours per Day" data-uk="Годин на день">Hours per Day</label>
-  <input type="number" id="hoursPerDay" placeholder="6" />
+    <label data-en="Hours per Day" data-uk="Годин на день">Hours per Day</label>
+    <input type="number" id="hoursPerDay" placeholder="6" />
 
-  <label data-en="Tax (%)" data-uk="Податок (%)">Tax (%)</label>
-  <input type="number" id="tax" placeholder="5" />
+    <label data-en="Tax (%)" data-uk="Податок (%)">Tax (%)</label>
+    <input type="number" id="tax" placeholder="5" />
 
-  <button onclick="calculate()" data-en="Calculate" data-uk="Розрахувати">Calculate</button>
+    <button onclick="calculate()" data-en="Calculate" data-uk="Розрахувати">Calculate</button>
 
-  <div class="result" id="result"></div>
+    <div class="result" id="result"></div>
 
-  <div class="meme" id="meme">
-    <img src="" alt="Meme from The Office" id="memeImg" style="display:none;">
+    <div class="meme" id="meme">
+      <img src="" alt="Meme from The Office" id="memeImg" style="display:none;">
+    </div>
   </div>
 
   <script>
-    let lang = 'en';
-    let currency = 'USD';
+    let lang = localStorage.getItem('lang') || 'en';
+    let currency = localStorage.getItem('currency') || 'USD';
     const exchangeRate = 39; // USD → UAH
 
     function setLang(l) {
@@ -151,13 +166,13 @@
 
     function getMemeImage(rate) {
       if (rate < 5) {
-        return 'https://media.giphy.com/media/8nM6YNtvjuezzD7DNh/giphy.gif'; // very sad
+        return 'https://media.giphy.com/media/8nM6YNtvjuezzD7DNh/giphy.gif';
       } else if (rate < 10) {
-        return 'https://media.giphy.com/media/ei0E9JEqlOT54BI4fk/giphy.gif'; // sad
+        return 'https://media.giphy.com/media/ei0E9JEqlOT54BI4fk/giphy.gif';
       } else if (rate < 50) {
-        return 'https://media.giphy.com/media/rYxemTkIfp50lE6eJU/giphy.gif'; // hopeful
+        return 'https://media.giphy.com/media/rYxemTkIfp50lE6eJU/giphy.gif';
       } else {
-        return 'https://media.giphy.com/media/ZF6cgZ0WE08IYtxU60/giphy.gif'; // winner
+        return 'https://media.giphy.com/media/ZF6cgZ0WE08IYtxU60/giphy.gif';
       }
     }
 
@@ -166,26 +181,33 @@
       const hoursPerDay = +document.getElementById('hoursPerDay').value || 0;
       const tax = +document.getElementById('tax').value || 0;
 
+      // Save input values
+      localStorage.setItem('rate', rate);
+      localStorage.setItem('hoursPerDay', hoursPerDay);
+      localStorage.setItem('tax', tax);
+
       const days = 5;
-      const weeklyHours = days * hoursPerDay;
-      const monthlyHours = weeklyHours * 4;
-      const gross = rate * monthlyHours;
-      const taxAmount = gross * (tax / 100);
-      const net = gross - taxAmount;
-      const yearly = net * 12;
+      const dailyGross = rate * hoursPerDay;
+      const weeklyGross = dailyGross * days;
+      const monthlyGross = weeklyGross * 4;
+      const taxAmount = monthlyGross * (tax / 100);
+      const monthlyNet = monthlyGross - taxAmount;
+      const yearlyNet = monthlyNet * 12;
 
       const symbol = currency === 'UAH' ? '₴' : '$';
       const multiplier = currency === 'UAH' ? exchangeRate : 1;
 
       const t = {
-        en: ['Gross Monthly', 'Net Monthly', 'Net Yearly'],
-        uk: ['Брутто в місяць', 'Нетто в місяць', 'Нетто в рік']
+        en: ['Daily Income', 'Weekly Income', 'Gross Monthly', 'Net Monthly', 'Net Yearly'],
+        uk: ['Дохід за день', 'Дохід за тиждень', 'Брутто в місяць', 'Нетто в місяць', 'Нетто в рік']
       };
 
       document.getElementById('result').innerHTML = `
-        <div>${t[lang][0]}: ${symbol}${(gross * multiplier).toFixed(2)}</div>
-        <div>${t[lang][1]}: ${symbol}${(net * multiplier).toFixed(2)}</div>
-        <div>${t[lang][2]}: ${symbol}${(yearly * multiplier).toFixed(2)}</div>
+        <div>${t[lang][0]}: ${symbol}${(dailyGross * multiplier).toFixed(2)}</div>
+        <div>${t[lang][1]}: ${symbol}${(weeklyGross * multiplier).toFixed(2)}</div>
+        <div>${t[lang][2]}: ${symbol}${(monthlyGross * multiplier).toFixed(2)}</div>
+        <div>${t[lang][3]}: ${symbol}${(monthlyNet * multiplier).toFixed(2)}</div>
+        <div>${t[lang][4]}: ${symbol}${(yearlyNet * multiplier).toFixed(2)}</div>
       `;
 
       const memeImg = document.getElementById('memeImg');
@@ -194,10 +216,11 @@
     }
 
     window.onload = () => {
-      lang = localStorage.getItem('lang') || 'en';
-      currency = localStorage.getItem('currency') || 'USD';
       document.getElementById('langSelect').value = lang;
       document.getElementById('currencySelect').value = currency;
+      document.getElementById('rate').value = localStorage.getItem('rate') || '';
+      document.getElementById('hoursPerDay').value = localStorage.getItem('hoursPerDay') || '';
+      document.getElementById('tax').value = localStorage.getItem('tax') || '';
       setLang(lang);
       setCurrency(currency);
     };
